--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-react-table": "^1.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
